# move3d

./: .gitignore  README.md  environment.yml  environment_raw.yml  new_environment.yml  pyproject.toml  requirements.txt
configs/: deeplabcut_config.yaml  estimation_2d.yaml  general_config.yaml
envs/: environment.yml  environment_gpu.yml
src/: 2d_estimation.py  RTM-lib.ipynb  Temp_tests.py  angle_comparison.py  calculate_offsets.ipynb  demo.py  estimation_2d.py  interface.py  interface_bert.py  motion_BERT.py  pipeline.py  test.ipynb  test_inter  test_interface.py  utils.py
src/MotionBERT/: infer_wild.py
src/MotionBERT/lib/data/: dataset_wild.py
src/interface/: interface.py
src/mp4_to_3D/: motion_BERT.py  mp4_to_2D.py  pipeline_mp4_to_3D.py
tests/: sapiens_test.ipynb  test_3D_pose_estimation.py  test_c3d.ipynb
tests/poubelle/: deeplabcut_to_try.ipynb
